--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
-metrics.path.app: butelkatr
+metrics.path.app: butelkatr-red
 
 stubrunner:
-  skip-local-repo: false
-  work-offline: true
+  #skip-local-repo: false
+  #work-offline: true
   use-microservice-definitions: true
   stubs:
-    repository.root: "file://~/.m2/repository"
+    repository.root: "http://52.16.215.68:8081/nexus/content/repositories/releases/"
